# echoes

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml
.cargo/: config.toml
crates/echoes-audio/: Cargo.toml
crates/echoes-audio/src/: lib.rs  vad.rs
crates/echoes-config/: Cargo.toml
crates/echoes-config/src/: config.rs  conflict.rs  shortcuts.rs  validation.rs
crates/echoes-keyboard/: Cargo.toml
crates/echoes-keyboard/src/: lib.rs
crates/echoes-logging/: Cargo.toml
crates/echoes-logging/src/: error.rs  lib.rs  tracing_setup.rs
crates/echoes-platform/: Cargo.toml
crates/echoes-platform/src/: notifications.rs  permissions.rs
crates/echoes-stt/: Cargo.toml
crates/echoes-stt/src/: lib.rs  openai.rs  whisper.rs
echoes-audio/: Cargo.toml
echoes-audio/src/: error.rs  lib.rs  vad.rs
echoes-bin/: Cargo.toml
echoes-bin/src/: main.rs
echoes-config/: Cargo.toml
echoes-config/src/: config.rs  conflict.rs  lib.rs  shortcuts.rs  validation.rs
echoes-core/: Cargo.toml
echoes-core/src/: error.rs  lib.rs  logging.rs  tracing_setup.rs
echoes-core/src/keyboard/: keys.rs  mod.rs
echoes-core/src/stt/: mod.rs
echoes-core/src/ui/: app_state.rs  config.rs  config_manager.rs  keyboard_manager.rs  logs.rs  mod.rs  session_manager.rs  shortcut_editor.rs  shortcut_manager.rs  shortcuts.rs  status.rs  system_manager.rs
echoes-keyboard/: Cargo.toml
echoes-keyboard/src/: keys.rs  lib.rs
echoes-logging/: Cargo.toml
echoes-logging/src/: tracing_setup.rs
echoes-platform/: Cargo.toml
echoes-platform/src/: lib.rs  notifications.rs  permissions.rs
echoes-stt/: Cargo.toml
echoes-stt/src/: openai.rs  whisper.rs
src/: error.rs  lib.rs  logging.rs  main.rs  permissions.rs  tracing_setup.rs
src/audio/: mod.rs  vad.rs
src/config/: mod.rs
src/keyboard/: keys.rs  mod.rs
src/stt/: mod.rs  whisper.rs
src/ui/: app_state.rs  config.rs  config_manager.rs  keyboard_manager.rs  logs.rs  mod.rs  session_manager.rs  shortcut_editor.rs  shortcut_manager.rs  shortcuts.rs  status.rs  system_manager.rs
