[package]
name = "whispo-rust"
version = "0.1.0"
edition = "2021"
authors = ["Whispo Rust Contributors"]
description = "A fast, native dictation application written in Rust"
license = "MIT"

[dependencies]
# Keyboard and automation
rdev = { git = "https://github.com/fufesou/rdev" }
enigo = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Audio
cpal = "0.15"
hound = "3.5"

# HTTP and API clients
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# System integration
tray-icon = "0.11"
directories = "5"

# Error handling and utilities
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UI Framework
eframe = "0.24"  # Includes egui + native windowing
egui = "0.24"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
