[workspace]
resolver = "2"
members = [
    "crates/echoes-config",
    "crates/echoes-platform",
    "crates/echoes-audio",
    "crates/echoes-keyboard",
    "crates/echoes-stt",
    "echoes-core",
    "echoes-bin",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling and utilities
anyhow = "1"
thiserror = "2.0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System integration
directories = "6.0.0"

# HTTP and API clients
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Audio (for core crate)
cpal = "0.16.0"
hound = "3.5"
voice_activity_detector = "0.2.0"
rubato = "0.15"
ort-sys = { version = "=2.0.0-rc.9" }
ort = { version = "=2.0.0-rc.9" }
whisper-rs = "0.14"

# Keyboard and automation (for core crate)
rdev = { git = "https://github.com/fufesou/rdev" }
enigo = "0.5.0"

# UI Framework (for ui crate)
eframe = "0.31.1"
egui = "0.31.1"

# System tray (for ui crate)
tray-icon = "0.21.0"

# CLI (for main binary)
clap = { version = "4", features = ["derive"] }

# Platform-specific dependencies
[workspace.dependencies.mac-notification-sys]
version = "0.6"

[workspace.dependencies.core-foundation]
version = "0.10.1"

[workspace.dependencies.windows]
version = "0.61.3"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]

[workspace.dependencies.notify-rust]
version = "4"