[package]
name = "echoes-core"
version = "0.1.0"
edition = "2024"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Core library for echoes dictation application"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["audio", "dictation", "speech", "ui"]
categories = ["accessibility", "gui"]

[lib]
name = "echoes_core"
path = "src/lib.rs"

[dependencies]
# Local workspace crates
echoes-config = { path = "../echoes-config" }
echoes-platform = { path = "../echoes-platform" }
echoes-audio = { path = "../echoes-audio" }
echoes-keyboard = { path = "../echoes-keyboard" }
echoes-logging = { path = "../echoes-logging" }

# Workspace dependencies
tokio.workspace = true
eframe.workspace = true
egui.workspace = true
chrono.workspace = true

[lints]
workspace = true
