[package]
name = "echoes-keyboard"
version = "0.1.0"
edition = "2021"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Keyboard event handling and global hotkeys for Echoes"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["keyboard", "hotkeys", "input", "automation"]
categories = ["os", "accessibility"]

[dependencies]
# Local workspace crates
echoes-config = { path = "../echoes-config" }

# Workspace dependencies
anyhow.workspace = true
tracing.workspace = true

# Keyboard-specific dependencies
rdev.workspace = true
enigo.workspace = true

[lints]
workspace = true
