[package]
name = "echoes-platform"
version = "0.1.0"
edition = "2024"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Platform-specific functionality for echoes dictation application"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["audio", "speech", "platform", "permissions"]
categories = ["os", "accessibility"]

[dependencies]
# Workspace dependencies
thiserror.workspace = true
tracing.workspace = true

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys.workspace = true
core-foundation.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust.workspace = true

[lints]
workspace = true