[package]
name = "echoes-stt"
version = "0.1.0"
edition = "2021"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Speech-to-text provider integrations for Echoes"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["speech", "transcription", "whisper", "openai"]
categories = ["api-bindings", "accessibility"]

[dependencies]
# Local workspace crates
echoes-config = { path = "../echoes-config" }

# Workspace dependencies
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
directories.workspace = true
hound.workspace = true

# STT-specific dependencies
whisper-rs.workspace = true

[lints]
workspace = true