[package]
name = "echoes-audio"
version = "0.1.0"
edition = "2021"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Audio recording and processing for Echoes"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["audio", "recording", "speech", "vad"]
categories = ["multimedia::audio", "accessibility"]

[dependencies]
# Workspace dependencies
thiserror = { workspace = true }
tracing = { workspace = true }

# Audio-specific dependencies
cpal = { workspace = true }
hound = { workspace = true }
voice_activity_detector = { workspace = true }
rubato = { workspace = true }