[package]
name = "echoes-config"
version = "0.1.0"
edition = "2021"
authors = ["sengokudaikon <sengokudaikon@akagane.tech>"]
description = "Configuration management and shortcut conflict detection for Echoes"
license = "MIT"
repository = "https://github.com/sengokudaikon/echoes"
readme = "../README.md"
keywords = ["audio", "speech", "dictation", "config"]
categories = ["config", "accessibility"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies specific to config
tokio = { workspace = true }